--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,6 @@
 h2{
-    color: rgb(255, 145, 0)
+    color: rgb(255, 145, 0);
+    margin-left: 100px;
 }
 
 .img-thumbnail{
@@ -50,3 +51,52 @@ hr{
 
 
 
+/* search */
+
+
+.searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 30px;
+    width: 200px;
+    background-color: #353b48;
+    border-radius: 30px;
+    
+}
+
+.search_input{
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    /* height: 40px; */
+    width: 100px;
+}
+
+#search_icon_btn{
+    margin-left: 5px;
+}
+.btn{
+    height: 30px;
+    border-radius: 30px;
+    color: rgb(255, 145, 0);
+}
+
+.search_icon{
+
+    color: #e74c3c;
+}
+.search_icon:hover{
+    
+}
+.search_icon{
+    height: 30px;
+    width: 50px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color:white;
+    text-decoration:none;
+}
