--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,21 @@
-h2{
-    color: rgb(255, 145, 0);
-    margin-left: 100px;
+:root{
+    --main_color: #FF4E00; 
 }
 
+html,body{
+    background-color: #575555;
+    color: white;
+}
+h2{
+    color: var(--main_color);
+    margin-left: 100px;
+}
+h3{
+    color: var(--main_color);
+}
+a{
+    color: white
+}
 .img-thumbnail{
     height: 200px;  
     width: 150px;
@@ -16,7 +29,7 @@ hr{
 }
 
 #newsBtn, #categoryBtn, #aboutBtn{
-    color: rgb(255, 145, 0);
+    color: var(--main_color);
 }
 
 
@@ -36,7 +49,7 @@ hr{
 }
 #username{
     height: 16px;
-    color: rgb(255, 145, 0);
+    color:var(--main_color);
     font-size: 1em;
     margin: 0px;
 }
@@ -50,6 +63,10 @@ hr{
 }
 
 
+/* nav */
+.navbar{
+    background-color: #212121;
+}
 
 /* search */
 
@@ -59,7 +76,7 @@ hr{
     margin-top: auto;
     height: 30px;
     width: 200px;
-    background-color: #353b48;
+    background-color: #000000;
     border-radius: 30px;
     
 }
@@ -79,13 +96,9 @@ hr{
 .btn{
     height: 30px;
     border-radius: 30px;
-    color: rgb(255, 145, 0);
+    color: var(--main_color);
 }
 
-.search_icon{
-
-    color: #e74c3c;
-}
 .search_icon:hover{
     
 }
